--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
+    "marked": "^14.1.3",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
