--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.7.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.453.0",
     "marked": "^14.1.3",
